pipeline/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modresorts10war
  name: modresorts10war
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modresorts10war
  template:
    metadata:
      labels:
        app: modresorts10war
    spec:
      containers:
        - image: docker.io/application
          imagePullPolicy: Always
          name: modresorts10war
          ports:
            - containerPort: 9080
